# zkgroup

./: .gitignore  Cargo.toml  Dockerfile  Makefile  OVERVIEW.md  README.md  ZKGroup.podspec  build.gradle  deploy.gradle  rust-toolchain.toml  settings.gradle
android/: README.md
codegen/: Makefile  codegen.py  (+6 more)
rust/: Cargo.toml  rustfmt.license-template  rustfmt.toml
rust/benches/: zkgroup_benchmarks.rs
rust/scripts/: format-code
rust/src/: api.rs  common.rs  crypto.rs
rust/src/api/: profiles.rs  server_params.rs
rust/src/api/auth/: auth_credential.rs
rust/src/api/groups/: group_params.rs  mod.rs  profile_key_ciphertext.rs  uuid_ciphertext.rs
rust/src/api/profiles/: pni_credential.rs  pni_credential_presentation.rs  pni_credential_request_context.rs  pni_credential_response.rs  profile_key.rs  profile_key_commitment.rs  profile_key_credential.rs  profile_key_credential_presentation.rs  profile_key_credential_request.rs  profile_key_credential_request_context.rs  profile_key_credential_response.rs
rust/src/api/receipts/: receipt_credential.rs  receipt_credential_presentation.rs  receipt_credential_request_context.rs
rust/src/common/: array_utils.rs  constants.rs  mod.rs  sho.rs  simple_types.rs
rust/src/crypto/: credentials.rs  profile_key_commitment.rs  profile_key_credential_request.rs  profile_key_encryption.rs  profile_key_struct.rs  proofs.rs  receipt_credential_request.rs  receipt_struct.rs  signature.rs  uid_encryption.rs  uid_struct.rs
rust/src/ffi/: ffiapi.rs  ffiapijava.rs  simpleapi.rs
rust/tests/: integration_tests.rs  receipt_flow.rs
(+194 files in other folders)
